# BC-FLI-Spectra

./: README.md
BC-FLIM-Spectra-241112/: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
BC-FLIM-Spectra-241112/src/flim_s_gen/: __init__.py  _version.py  _widget.py  _writer.py  napari.yaml  seg2flim_s.py
Code-used/: Kmeans_cls_0627.py  pyPTUread.py  seg2phasor-4ch.py
LUMINA classification/: README.md
LUMINA_classification/: Data_prep.py  Test_LUMINA.py  Train_LUMINA.py  Visualize_heatmap.py
Napari plugin/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
Napari plugin/src/flim_s_gen/: _widget.py
Napari plugin/src/flim_s_gen - Copy/: _widget.py  napari.yaml  track_anything_simple.py
Napari plugin/src/flim_s_gen - Copy/_tests/: test_writer.py
Napari plugin/src/flim_s_gen - Copy/tools/: interact_tools.py
Napari plugin/src/flim_s_gen - Copy/tracker/inference/: memory_manager.py
Napari plugin/src/flim_s_gen/_tests/: test_reader.py
Napari plugin/src/flim_s_gen/tools/: painter.py
Napari plugin/src/flim_s_gen/tracker/: base_tracker.py
Napari_plugin/: README.md  pyproject.toml  tox.ini
Napari_plugin/examples/: jqw_nbl2_membrane_v7.config.json
Napari_plugin/src/flim_s_gen/: .gitignore  __init__.py  _finetune_runner.py  _widget.py  harmony_calib.py  napari.yaml  postproc.py
Napari_plugin/src/flim_s_gen/_tests/: test_sample_data.py  test_widget.py
Napari_plugin/src/flim_s_gen/inpainter/: base_inpainter.py
Napari_plugin/src/flim_s_gen/tracker/: base_tracker_simple.py
Napari_plugin/src/flim_s_gen/tracker/model/: memory_util.py  network.py
Napari_plugin/walkthrough/: storyboard.md  test_0x1c_patch.py  test_0x1c_with_subproc.py  test_model_scan_and_multi_ft.py
