[metadata]
name = BC-FLIM-Spectra

description = for cls and manual correction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baoyi-A/BC-FLIM-Spectra
author = Wang baoyi
author_email = wang.baoyi@stu.pku.edu.cn
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/baoyi-A/BC-FLIM-Spectra/issues
    Documentation = https://github.com/baoyi-A/BC-FLIM-Spectra#README.md
    Source Code = https://github.com/baoyi-A/BC-FLIM-Spectra
    User Support = https://github.com/baoyi-A/BC-FLIM-Spectra/issues

[options]
packages = find:
install_requires =
#     numpy
#     magicgui
#     qtpy
#     scikit-image

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    BC-FLIM-Spectra = flim_s_gen:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
